fix cart lost size

--- a/src/pages/User/CartPage/CartPage.css
+++ b/src/pages/User/CartPage/CartPage.css
@@ -98,7 +98,7 @@
   font-weight: 700;
   line-height: normal;
   margin-left: 18px;
-  margin-right: 75px;
+  /* margin-right: 75px; */
   margin-top: 56px;
 }
 
