--- a/src/components/ButtonNoBGComponent/ButtonNoBGComponent.module.css
+++ b/src/components/ButtonNoBGComponent/ButtonNoBGComponent.module.css
@@ -1,6 +1,6 @@
 .btn__noBG__component {
   display: flex;
-  width: var(--button-width);
+  min-width: var(--button-width);
   height: var(--button-height);
   padding: 8px 16px;
   justify-content: center;
