--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,6 +7,7 @@
   --brown100: #3a060e;
   --brown50: #3a060580;
   --brown30: #3a060e4d;
+  /* --green100: #85e500; */
   --green100: #b1e321;
   --green80: #b2e321cc;
   --green50: #b3e42150;
@@ -33,4 +34,5 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
+  background: #bcff6612;
 }
