--- a/src/pages/LogInPage/LogInPage.css
+++ b/src/pages/LogInPage/LogInPage.css
@@ -1,6 +1,6 @@
-.container-login {
+/* .container-login {
   background-color: var(--white);
-}
+} */
 
 .login-container {
   display: flex;
@@ -44,7 +44,7 @@
   border: none;
   border-radius: 20px;
   box-shadow: 0px 2px 4px 0px var(--grey5);
-  background-color: var(--grey5);
+  background-color: var(--white);
 }
 
 .login__title {
@@ -65,6 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  text-align: right;
   font-size: 1.4rem;
   color: var(--brown100);
   margin-bottom: 10px;
