--- a/src/pages/User/QuizzPage/QuizzPage.module.css
+++ b/src/pages/User/QuizzPage/QuizzPage.module.css
@@ -1,5 +1,5 @@
 .quizContainer {
-  max-width: 800px;
+  /* max-width: 800px; */
   margin: 2rem auto;
   padding: 2rem;
   background: white;
@@ -171,6 +171,7 @@
   border: 1px solid #ffa7a7;
   border-radius: 8px;
   color: #d32f2f;
-  font-size: 1.1rem;
+  font-size: 1.6rem;
   text-align: center;
+  /* width: 100vw; */
 }
