--- a/src/components/SideMenuComponent/SideMenuComponent.css
+++ b/src/components/SideMenuComponent/SideMenuComponent.css
@@ -1,5 +1,5 @@
 .btn__side-menu {
-  background-color: var(--white);
+  background-color: transparent;
   width: 24rem;
   height: auto;
   padding: 1rem;
