--- a/src/components/SideMenuComponent_AdminManage/SideMenuComponent_AdminManage.css
+++ b/src/components/SideMenuComponent_AdminManage/SideMenuComponent_AdminManage.css
@@ -1,10 +1,10 @@
 .btn__side-menu {
-  background-color: var(--white);
+  background: transparent;
   width: 24rem;
   height: auto;
   padding: 1rem;
   /* box-shadow: 0px 2px 4px 0px #203c1640; */
-  border-radius: 8px;
+  border-radius: 0px;
   top: 0;
   flex-direction: column;
 }
@@ -39,8 +39,8 @@
   color: var(--brown100);
 }
 
-.btn__component.active-btn  {
+.btn__component.active-btn {
   background: var(--green30);
   border-radius: 10px;
-  color: var(--brown100); 
+  color: var(--brown100);
 }
