--- a/src/components/SideMenuComponent_AdminManage/SideMenuComponent_AdminManage.css
+++ b/src/components/SideMenuComponent_AdminManage/SideMenuComponent_AdminManage.css
@@ -1,10 +1,10 @@
 .btn__side-menu {
-  background: transparent;
+  background-color: var(--white);
   width: 24rem;
   height: auto;
   padding: 1rem;
   /* box-shadow: 0px 2px 4px 0px #203c1640; */
-  border-radius: 0px;
+  border-radius: 8px;
   top: 0;
   flex-direction: column;
 }
