--- a/src/components/ProductInfor/ProductInfor.css
+++ b/src/components/ProductInfor/ProductInfor.css
@@ -3,10 +3,11 @@
 }
 
 .imagePro {
-  width: 164.122px;
-  height: 116px;
+  width: 100px;
+  height: 100px;
+  /* border-radius: 100px; */
   flex-shrink: 0;
-  border-radius: 15px;
+  border-radius: 8px;
   object-fit: cover;
 }
 
@@ -18,14 +19,15 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  width: 150px;
+  min-width: 150px;
+  max-width: 300px;
   margin-left: 10px;
 }
 
 .ProSize {
   color: #3a060e;
   font-family: Poppins;
-  font-size: 18px;
+  font-size: 1.4rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
