--- a/src/pages/User/MiniGamePage/MiniGamePage.module.css
+++ b/src/pages/User/MiniGamePage/MiniGamePage.module.css
@@ -27,11 +27,13 @@
 /* Hiển thị số xu */
 .coinsDisplay {
   text-align: center;
-  margin-bottom: 20px;
+
   padding: 15px;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  border-radius: 10px;
+  background: linear-gradient(135deg, #11ac35 0%, #68e21d 100%);
+  border-radius: 50px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  /* width: 600px; */
+  margin: 20px auto;
 }
 
 .coinsText {
@@ -435,6 +437,7 @@
   cursor: pointer;
   transition: background-color 0.3s;
   min-width: 600px;
+  margin-bottom: 30px;
 }
 
 .button:hover:not(:disabled) {
