--- a/src/components/CardProduct/Card.module.css
+++ b/src/components/CardProduct/Card.module.css
@@ -84,7 +84,9 @@
   text-align: center;
 }
 .priceProduct {
-  font-weight: 500;
+  font-weight: 600;
+  font-size: 2rem;
+  margin-bottom: 10px;
 }
 .priceProductOld {
   font-size: 13px;
