--- a/src/components/MessageComponent/Message.css
+++ b/src/components/MessageComponent/Message.css
@@ -4,12 +4,14 @@
   align-items: center;
   padding: 10px 16px;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: bold;
   margin-bottom: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
   animation: fadeIn 0.3s ease-in-out;
   transition: opacity 0.5s ease-out; /* Thêm transition cho hiệu ứng mờ dần */
+  width: 100%;
+  background-color: transparent;
 }
 
 .alert-box .message-icon {
